[package]
name = "hashbrown"
version = "0.1.4"
authors = ["Amanieu d'Antras <amanieu@gmail.com>"]
description = "A Rust port of Google's SwissTable hash map"
license = "Apache-2.0/MIT"
repository = "https://github.com/Amanieu/hashbrown"
readme = "README.md"
keywords = ["hash", "no_std", "hashmap", "swisstable"]
categories = ["data-structures", "no-std"]

[dependencies]
scopeguard = { version = "0.3", default-features = false }
byteorder = { version = "1.0", default-features = false }
serde = { version = "1.0", default-features = false, optional = true }

[dev-dependencies]
rustc-hash = "1.0"
serde_test = "1.0"

[features]
nightly = []
